--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentic Cave Is What The World Was Waiting For</title>
-    <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -40,8 +40,8 @@
     <section class="banner">
         <div class="container">
             <div class="row banner-content">
-                <div class="col-md-7"></div>
-                <div class="col-md-5">
+                <div class="col-md-4 col-xl-7"></div>
+                <div class="col-md-8 col-xl-5">
                     <h2 class="head2 wow fadeInUp">Lorem ipsum dolor sit amet consectetur</h2>
                     <h4 class="wow fadeInUp" data-wow-delay="200ms">lorem ipsum dolor sit amet <img src="images/arrow-path.svg" alt="Arrow Icon" /></h4>
                 </div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 project-list">
+                <div class="col-md-6 col-xl-3 project-list">
                     <img src="images/project-1.jpg" alt="Project 1" />
                     <div class="project-list-content wow fadeInUp" data-wow-delay="200ms">
                         <h4>Web Development</h4>
@@ -80,7 +80,7 @@
                         <h4><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></h4>
                     </div>
                 </div>
-                <div class="col-md-3 project-list">
+                <div class="col-md-6 col-xl-3 project-list">
                     <img src="images/project-2.jpg" alt="Project 1" />
                     <div class="project-list-content wow fadeInUp" data-wow-delay="400ms">
                         <h4>Web Development</h4>
@@ -89,7 +89,7 @@
                         <h4><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></h4>
                     </div>
                 </div>
-                <div class="col-md-3 project-list">
+                <div class="col-md-6 col-xl-3 project-list">
                     <img src="images/project-3.jpg" alt="Project 1" />
                     <div class="project-list-content wow fadeInUp" data-wow-delay="600ms">
                         <h4>Web Development</h4>
@@ -98,7 +98,7 @@
                         <h4><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></h4>
                     </div>
                 </div>
-                <div class="col-md-3 project-list">
+                <div class="col-md-6 col-xl-3 project-list">
                     <img src="images/project-4.jpg" alt="Project 1" />
                     <div class="project-list-content wow fadeInUp" data-wow-delay="800ms">
                         <h4>Web Development</h4>
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-    <section class="work py-5">
+    <section class="work py-md-5">
         <div class="container">
             <div class="row py-5">
                 <div class="col-md-3 work-list">
@@ -193,28 +193,28 @@
                 <div class="col-md-3 wow fadeInUp">
                     <img class="contact-logo" src="images/logo.png" alt="Logo" />
                 </div>
-                <div class="col-md-4 text-end">                    
+                <div class="col-md-4 text-md-end">                    
                   <a class="foot-link wow fadeInUp" href="mailto:rohankumar@authenticcave.com">
                     <i class="bi bi-envelope"></i>
                     <span>rohankumar@authenticcave.com</span>
                   </a>
                 </div>
-                <div class="col-md-3 text-end">
+                <div class="col-md-3 text-md-end">
                     <h5 class="text-white wow fadeInUp">Get in touch with us with any questions</h5>
                     <a class="foot-link wow fadeInUp" href="tel:+917065157902">+91 7065157902</a>
                 </div>
                 <div class="col-md-2">
                     <div class="row social-icons">
-                        <div class="col-sm col-md-6 text-center wow fadeInUp">
+                        <div class="col-3 col-md-6 text-center wow fadeInUp">
                             <i class="bi bi-facebook"></i>
                         </div>
-                        <div class="col-sm col-md-6 text-center wow fadeInUp">
+                        <div class="col-3 col-md-6 text-center wow fadeInUp">
                             <i class="bi bi-instagram"></i>
                         </div>
-                        <div class="col-sm col-md-6 text-center wow fadeInUp">
+                        <div class="col-3 col-md-6 text-center wow fadeInUp">
                             <i class="bi bi-linkedin"></i>
                         </div>
-                        <div class="col-sm col-md-6 text-center wow fadeInUp">
+                        <div class="col-3 col-md-6 text-center wow fadeInUp">
                             <i class="bi bi-whatsapp"></i>
                         </div>
                     </div>
@@ -226,10 +226,10 @@
     <section class="stay-tuned py-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 text-center-sm">
                     <img class="stay-image" src="images/stay-tuned.png" alt="" />
                 </div>
-                <div class="col-md-6 text-end wow fadeInUp">
+                <div class="col-md-6 text-md-end text-center wow fadeInUp">
                     <p>Newsletter</p>
                     <p class="subscribe">
                         Subscribe to our newsletter and
