recent-project-section-updated

--- a/index.html
+++ b/index.html
@@ -81,34 +81,34 @@
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
-                        <h4><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></h4>
+                        <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 project-list">
                     <img src="images/project-2.jpg" alt="Project 1" />
-                    <div class="project-list-content wow fadeInUp" data-wow-delay="400ms">
+                    <div class="project-list-content wow fadeInUp" data-wow-delay="300ms">
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
-                        <h4><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></h4>
+                        <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 project-list">
                     <img src="images/project-3.jpg" alt="Project 1" />
-                    <div class="project-list-content wow fadeInUp" data-wow-delay="600ms">
+                    <div class="project-list-content wow fadeInUp" data-wow-delay="400ms">
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
-                        <h4><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></h4>
+                        <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 project-list">
                     <img src="images/project-4.jpg" alt="Project 1" />
-                    <div class="project-list-content wow fadeInUp" data-wow-delay="800ms">
+                    <div class="project-list-content wow fadeInUp" data-wow-delay="500ms">
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
-                        <h4><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></h4>
+                        <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
             </div>
