--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="javascript:void()">HOME</a>
                   <a class="nav-link" href="javascript:void()">ABOUT US</a>
-                  <a class="nav-link" href="javascript:void()">PACKAGES</a>
+                  <a class="nav-link" href="javascript:void()">SERVICES</a>
                   <a class="nav-link" href="javascript:void()">CONTACT</a>
                   <a class="nav-link" href="mailto:rohankumar@authenticcave.com">
                     <i class="bi bi-envelope"></i>
