--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,28 +12,60 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <!-- <header class="header" id="header">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="javascript:void()">
+                    <img src="images/logo.png" alt="Logo" />
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="javascript:void()">HOME</a>
+                        <a class="nav-link" href="javascript:void()">ABOUT US</a>
+                        <a class="nav-link" href="javascript:void()">SERVICES</a>
+                        <a class="nav-link" href="javascript:void()">CONTACT</a>
+                        <a class="nav-link" href="mailto:rohankumar@authenticcave.com">
+                            <i class="bi bi-envelope"></i>
+                            <span>rohankumar@authenticcave.com</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header> -->
+
     <header class="header" id="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-              <a class="navbar-brand" href="javascript:void()">
-                <img src="images/logo.png" alt="Logo" />
-              </a>
-              <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="javascript:void()">HOME</a>
-                  <a class="nav-link" href="javascript:void()">ABOUT US</a>
-                  <a class="nav-link" href="javascript:void()">SERVICES</a>
-                  <a class="nav-link" href="javascript:void()">CONTACT</a>
-                  <a class="nav-link" href="mailto:rohankumar@authenticcave.com">
-                    <i class="bi bi-envelope"></i>
-                    <span>rohankumar@authenticcave.com</span>
-                  </a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/logo.png" alt="Logo" />
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="back-opac">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                            <a class="nav-link" href="javascript:void()">ABOUT US</a>
+                            <a class="nav-link" href="javascript:void()">SERVICES</a>
+                            <a class="nav-link" href="javascript:void()">CONTACT</a>
+                            <a class="nav-link" href="mailto:sk03950@gmail.com">
+                                <i class="bi bi-envelope"></i>
+                                <span>sk03950@gmail.com</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
         </nav>
     </header>
@@ -41,16 +74,16 @@
         <div class="container">
             <div class="banner-text">
                 <h2 class="head2 wow fadeInRight">Lorem ipsum dolor&nbsp;sit amet consectetur</h2>
-                <button class="wow fadeInRight">lorem ipsum dolor sit amet 
+                <button class="wow fadeInRight">lorem ipsum dolor sit amet
                     <img src="images/arrow-path.svg" alt="Arrow Icon" />
                 </button>
             </div>
             <h5>
-                <a href="javascript:void()">SCROLL TO<br />EXPLORE 
+                <a href="javascript:void()">SCROLL TO<br />EXPLORE
                     <img src="images/scroll.svg" alt="Scroll-icon" />
                 </a>
             </h5>
-        </div> 
+        </div>
     </section>
 
     <section class="our-mission py-5">
@@ -58,7 +91,10 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2 class="wow fadeInUp">OUR MISSION</h2>
-                    <p class="wow fadeInUp" data-wow-delay="200ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed. Curabitur eu leo ullamcorper, pulvinar metus ut, mattis est. In accumsan iaculis mi, ut pharetra tortor scelerisque eu. </p>
+                    <p class="wow fadeInUp" data-wow-delay="200ms">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl,
+                        non tincidunt urna porta sed. Curabitur eu leo ullamcorper, pulvinar metus ut, mattis est. In
+                        accumsan iaculis mi, ut pharetra tortor scelerisque eu. </p>
                 </div>
                 <div class="col-md-6">
                     <img class="wow fadeInUp" src="images/mission.png" alt="Mission" />
@@ -80,7 +116,8 @@
                     <div class="project-list-content wow fadeInUp" data-wow-delay="200ms">
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in
+                            commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
                         <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
@@ -89,7 +126,8 @@
                     <div class="project-list-content wow fadeInUp" data-wow-delay="300ms">
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in
+                            commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
                         <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
@@ -98,7 +136,8 @@
                     <div class="project-list-content wow fadeInUp" data-wow-delay="400ms">
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in
+                            commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
                         <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
@@ -107,7 +146,8 @@
                     <div class="project-list-content wow fadeInUp" data-wow-delay="500ms">
                         <h4>Web Development</h4>
                         <h3>Company Name</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in
+                            commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
                         <button><img src="images/arrow-path-white.svg" alt="" /><span>EXPLORE</span></button>
                     </div>
                 </div>
@@ -121,7 +161,8 @@
                 <div class="col-md-6 service-wrapper p-md-0">
                     <div class="service-content">
                         <h4 class="wow fadeInUp" data-wow-delay="200ms">Our Services</h4>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem Ipsum is simply dummy text of the printing
+                            and typesetting industry.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -142,7 +183,7 @@
                             <p class="wow fadeInUp" data-wow-delay="350ms">Lorem ipsum dolor sit amet</p>
                             <button type="button" class="btn-light btn-without-bg">
                                 <div class="btn-without-bg">
-                                    <img src="images/map-board.svg" alt="Read More Button"> 
+                                    <img src="images/map-board.svg" alt="Read More Button">
                                     <img class="hover-btn" src="images/map-board-white.svg" alt="Read More Button">
                                     Read More
                                 </div>
@@ -153,7 +194,7 @@
                             <p class="wow fadeInUp" data-wow-delay="450ms">Lorem ipsum dolor sit amet</p>
                             <button type="button" class="btn-light btn-without-bg">
                                 <div class="btn-without-bg">
-                                    <img src="images/map-board.svg" alt="Read More Button"> 
+                                    <img src="images/map-board.svg" alt="Read More Button">
                                     <img class="hover-btn" src="images/map-board-white.svg" alt="Read More Button">
                                     Read More
                                 </div>
@@ -165,7 +206,7 @@
                             <button type="button" class="btn-light btn-without-bg">
                                 <div class="btn-without-bg">
                                     <img src="images/map-board.svg" alt="Read More Button">
-                                    <img class="hover-btn" src="images/map-board-white.svg" alt="Read More Button"> 
+                                    <img class="hover-btn" src="images/map-board-white.svg" alt="Read More Button">
                                     Read More
                                 </div>
                             </button>
@@ -182,22 +223,62 @@
                 <div class="col-lg-3 col-md-6 work-list">
                     <img src="images/product-strategy.svg" alt="Product Strategy" />
                     <h4 class="wow fadeInUp" data-wow-delay="200ms">Product Strategy</h4>
-                    <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt eleifend vestibulum. Curabitur </p>
+                    <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. In tincidunt eleifend vestibulum. Curabitur </p>
                 </div>
                 <div class="col-lg-3 col-md-6 work-list right-arrow">
                     <img src="images/digital-pencil.svg" alt="UI/UX & Web designing" />
                     <h4 class="wow fadeInUp" data-wow-delay="400ms">UI/UX & Web designing</h4>
-                    <p class="wow fadeInUp" data-wow-delay="600ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt eleifend vestibulum. Curabitur </p>
+                    <p class="wow fadeInUp" data-wow-delay="600ms">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. In tincidunt eleifend vestibulum. Curabitur </p>
                 </div>
                 <div class="col-lg-3 col-md-6 work-list right-arrow arrow-down">
                     <img src="images/development.svg" alt="Development" />
                     <h4 class="wow fadeInUp" data-wow-delay="600ms">Development</h4>
-                    <p class="wow fadeInUp" data-wow-delay="800ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt eleifend vestibulum. Curabitur </p>
+                    <p class="wow fadeInUp" data-wow-delay="800ms">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. In tincidunt eleifend vestibulum. Curabitur </p>
                 </div>
                 <div class="col-lg-3 col-md-6 work-list right-arrow">
                     <img src="images/conversion.svg" alt="Conversion" />
                     <h4 class="wow fadeInUp" data-wow-delay="800ms">Conversion</h4>
-                    <p class="wow fadeInUp" data-wow-delay="1000ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt eleifend vestibulum. Curabitur </p>
+                    <p class="wow fadeInUp" data-wow-delay="1000ms">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. In tincidunt eleifend vestibulum. Curabitur </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="why-choose py-5">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col-12 text-center">
+                    <h2 class="why-choose-heading text-white wow fadeInUp"
+                        style="visibility: visible; animation-name: fadeInUp;">Why Choose us ?</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="works wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+                        <h4 class="text-white">Detailed Consultation</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in
+                            commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="works wow fadeInUp" data-wow-delay="50ms"
+                        style="visibility: visible; animation-delay: 50ms; animation-name: fadeInUp;">
+                        <h4 class="text-white">Time Oriented Results</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in
+                            commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="works wow fadeInUp" data-wow-delay="100ms"
+                        style="visibility: visible; animation-delay: 100ms; animation-name: fadeInUp;">
+                        <h4 class="text-white">Regular Followups</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt lacinia metus, in
+                            commodo massa ornare vulputate. Fusce sodales euismod nisl, non tincidunt urna porta sed</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -209,11 +290,11 @@
                 <div class="col-md-3 wow fadeInUp">
                     <img class="contact-logo" src="images/logo.png" alt="Logo" />
                 </div>
-                <div class="col-md-4 text-md-end">                    
-                  <a class="foot-link wow fadeInUp" href="mailto:rohankumar@authenticcave.com">
-                    <i class="bi bi-envelope me-2"></i>
-                    <span>rohankumar@authenticcave.com</span>
-                  </a>
+                <div class="col-md-4 text-md-end">
+                    <a class="foot-link wow fadeInUp" href="mailto:rohankumar@authenticcave.com">
+                        <i class="bi bi-envelope me-2"></i>
+                        <span>rohankumar@authenticcave.com</span>
+                    </a>
                 </div>
                 <div class="col-md-3 text-md-end">
                     <h5 class="text-white wow fadeInUp">Get in touch with us with any questions</h5>
@@ -263,7 +344,8 @@
                     </p>
                     <form action="" method="post">
                         <div class="input-field">
-                            <input type="email" name="email" id="email" class="email" placeholder="Enter your email" required />
+                            <input type="email" name="email" id="email" class="email" placeholder="Enter your email"
+                                required />
                         </div>
                         <button type="submit">Subscribe <img src="images/arrow-path-white.svg" alt="" /></button>
                     </form>
@@ -273,7 +355,7 @@
     </section>
 
     <section class="footer py-3">
-        <div class="container">            
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <p class="text-center m-0">© 2022 Authentic Cave. All Rights Reserved.</p>
@@ -288,4 +370,5 @@
     <script src="js/wow.min.js"></script>
     <script src="js/my_script.js"></script>
 </body>
+
 </html>
