--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@
                     <img class="contact-logo" src="images/logo.png" alt="Logo" />
                 </div>
                 <div class="col-md-4 text-md-end">
-                    <a class="foot-link wow fadeInUp" href="mailto:rohankumar@authenticcave.com">
+                    <a class="foot-link wow fadeInUp" href="mailto:sk03950@gmail.com">
                         <i class="bi bi-envelope me-2"></i>
-                        <span>rohankumar@authenticcave.com</span>
+                        <span>sk03950@gmail.com</span>
                     </a>
                 </div>
                 <div class="col-md-3 text-md-end">
                     <h5 class="text-white wow fadeInUp">Get in touch with us with any questions</h5>
-                    <a class="foot-link wow fadeInUp" href="tel:+917065157902">+91 7065157902</a>
+                    <a class="foot-link wow fadeInUp" href="tel:+919910923385">+91 9910923385</a>
                 </div>
                 <div class="col-md-2">
                     <div class="row social-icons">
